<resources>
    <string name="app_name">FoodFinder</string>
    <string name="login_title">Login</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_name">Enter First Name and Last Name</string>
    <string name="hint_mobile">Enter Phone Number</string>
    <string name="hint_password">Enter Password</string>
    <string name="Login_undertext">Do not have an account? Sign Up</string>
    <string name="register_title">Register</string>
    <string name="register_button">Sign Up</string>
    <string name="signup_undertext">Already an user? Login</string>
    <string name="alert_button">OK</string>
    <string name="Success">Success</string>
    <string name="search_view">Search Here</string>
    <string name="seeAll">See All</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Cart</string>
    <string name="menu_slideshow">Order</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_signout">Log Out</string>
    <string name="menu_map">Location</string>

    <string name="category">Category</string>
    <string name="food_item">Food Items</string>
    <string name="food_item_price">Price : Rs.</string>
    <string name="food_item_btn">Add To Cart</string>
    <string name="single_header">Item Details</string>
    <string name="item_qty">Quantity:</string>
    <string name="size_full">Full : Rs.</string>
    <string name="size_normal">Normal : Rs.</string>
    <string name="detail">Details</string>
    <string name="total_price">Total Price : Rs.</string>
    <string name="place_order">Place Order</string>


    <string name="rupees">Total : Rs.</string>
    <string name="checkout_btn">Checkout</string>

    <string name="profile_text">Profile</string>
    <string name="profile_btn">Save Changes</string>

    <string name="password_change">Password Change</string>
    <string name="password_change_btn">Change Password</string>
    <string name="current_password_hint">Current Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="title_activity_user">UserActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>