<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_dashboard"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/user_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/cart_black"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/order"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_signout" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/nav_map"
            android:title="@string/menu_map" />

    </group>
</menu>